# phonenumbers-jp-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
jp_phone_numbers/: __init__.py  _data.py
phonenumbers_jp/: __init__.py  _data.py  types.py
src/phonenumbers_jp/: _data.py  types.py
tests/: test_parse.py
tools/: build_data.py
