[tool.poetry]
name = "phonenumbers-jp"
version = "0.0.2"
description = "Analyze Japanese domestic phone numbers"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ciscorn/phonenumbers-jp-py"
repository = "https://github.com/ciscorn/phonenumbers-jp-py"
keywords = []
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pre-commit = "^2.8.2"
xlrd = "^1.2.0"
requests = "^2.25.0"
pandas = "^1.1.4"

[tool.isort]
include_trailing_comma = true
line_length=88
multi_line_output=3
known_third_party = []

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
