[tool.poetry]
name = "phonenumbers-jp"
version = "0.1.0"
description = "Analyze Japanese domestic phone numbers"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ciscorn/phonenumbers-jp-py"
repository = "https://github.com/ciscorn/phonenumbers-jp-py"
keywords = []
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
xlrd = "^2.0.1"
pandas = "^1.5.3"
pyright = "^1.1.298"
isort = "^5.12.0"

[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
